# smart-contract

./: Cargo.toml  README.md
.github/: test.yml
script/: DeployKalloViewRegistry.s.rs
src/: KalloViewRegistry.rs
test/: KallowViewRegistry.t.rs
