[package]
name = "smart-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = "^4.1"
forge-std = "1.5.2"
openzeppelin-contracts = "3.4.0"  # Replace with the desired version

[lib]
name = "smartContract"
path = "src/lib.rs"
